--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 __pycache__/
 *.py[cod]
 *$py.class
+node_modules
 
 # C extensions
 *.so
 
 # Distribution / packaging
+venv
 .Python
 build/
 develop-eggs/
