--- a/xops_qd/package.json
+++ b/xops_qd/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "xops-qt",
   "version": "1.2.0",
   "license": "Apache License 2.0",
@@ -11,6 +12,10 @@
     "test": "npm run lint",
     "precommit": "lint-staged",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xufqing/rest_xops.git"
   },
   "dependencies": {
     "@riophae/vue-treeselect": "0.0.38",
@@ -38,19 +43,19 @@
   },
   "devDependencies": {
     "autoprefixer": "8.5.0",
-    "babel-core": "6.26.3",
+    "babel-core": "6.26.0",
     "babel-eslint": "8.2.6",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-loader": "7.1.5",
+    "babel-loader": "7.1.4",
     "babel-plugin-dynamic-import-node": "2.0.0",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-transform-vue-jsx": "3.7.0",
-    "babel-preset-env": "1.7.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-stage-2": "6.24.1",
-    "cross-env": "5.2.0",
     "chalk": "2.4.1",
     "copy-webpack-plugin": "4.5.2",
+    "cross-env": "5.2.0",
     "css-loader": "1.0.0",
     "eslint": "4.19.1",
     "eslint-friendly-formatter": "4.0.1",
@@ -59,7 +64,7 @@
     "eventsource-polyfill": "0.9.6",
     "file-loader": "1.1.11",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "html-webpack-plugin": "4.0.0-alpha",
+    "html-webpack-plugin": "^4.0.2",
     "mini-css-extract-plugin": "0.4.1",
     "node-notifier": "5.2.1",
     "node-sass": "^4.7.2",
@@ -72,8 +77,8 @@
     "postcss-url": "7.3.2",
     "rimraf": "2.6.2",
     "sass-loader": "7.0.3",
-    "script-loader": "0.7.2",
     "script-ext-html-webpack-plugin": "2.0.1",
+    "script-loader": "0.7.2",
     "semver": "5.5.0",
     "shelljs": "0.8.2",
     "svg-sprite-loader": "3.8.0",
@@ -86,7 +91,7 @@
     "webpack": "4.16.5",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": ">= 3.1.11",
+    "webpack-dev-server": "3.1.5",
     "webpack-merge": "4.1.4"
   },
   "engines": {
