--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ amqp==2.4.1
 asgiref==2.3.2
 asn1crypto==0.24.0
 async-timeout==3.0.1
+asyncio==3.4.3
 attrs==19.1.0
 autobahn==19.2.1
 Automat==0.7.0
@@ -28,11 +29,14 @@ django-filters==0.2.1
 django-simple-history==2.7.0
 djangorestframework==3.9.1
 djangorestframework-jwt==1.11.0
+djangorestframework-stubs==1.1.0
 fabric2==2.4.0
 flower==0.9.2
+gunicorn==19.9.0
 hiredis==1.0.0
 hyperlink==18.0.0
 idna==2.8
+importlib-metadata==1.1.0
 incremental==17.5.0
 invoke==1.2.0
 itypes==1.1.0
@@ -40,6 +44,7 @@ Jinja2==2.10
 kombu==4.3.0
 Markdown==3.0.1
 MarkupSafe==1.1.0
+more-itertools==8.0.0
 msgpack==0.6.1
 msgpack-python==0.5.6
 mysqlclient==1.3.13
@@ -48,22 +53,27 @@ paramiko==2.4.2
 paramiko-expect==0.2.8
 Pillow==5.4.1
 pyasn1==0.4.5
+pyasn1-modules==0.2.7
 pycparser==2.19
 PyHamcrest==1.9.0
 PyJWT==1.7.1
 PyNaCl==1.3.0
+pyOpenSSL==19.1.0
 python-nmap==0.6.1
 pytz==2018.9
 PyYAML==5.1
 redis==2.10.6
 requests==2.21.0
 ruamel.yaml==0.15.80
+service-identity==18.1.0
+simple-history==1.1
 six==1.12.0
+sqlparse==0.3.0
 tornado==5.1.1
 Twisted==18.9.0
 txaio==18.8.1
 uritemplate==3.0.0
 urllib3==1.24.1
 vine==1.2.0
+zipp==0.6.0
 zope.interface==4.6.0
-gunicorn==19.9.0
