--- a/xops_qd/package.json
+++ b/xops_qd/package.json
@@ -27,6 +27,7 @@
     "file-saver": "1.3.8",
     "js-cookie": "2.2.0",
     "jszip": "3.1.5",
+    "moment": "^2.24.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "screenfull": "3.3.3",
